// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Product Switch Large 1`] = `
<div
  class="fd-product-switch__body"
>
  
   
  <ul
    class="fd-product-switch__list"
  >
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--home"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Home
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Central Home
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item selected"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--business-objects-experience"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Analytics Cloud Analytics CloudAnalytics CloudAnalytics Cloud
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Analytics Cloud
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--contacts"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Catalog
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Ariba
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--credit-card"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Guided Buying
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--cart-3"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Strategic Procurement
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--flight"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Travel & Expense
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Concur
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--shipping-status"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Vendor Management
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Fieldglass
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--customer"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Human Capital Management Human Capital Management
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--sales-notification"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Sales Cloud
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Sales Cloud
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--retail-store"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Commerce Cloud
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Commerce Cloud
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--marketing-campaign"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Marketing Cloud
        </div>
        
            
        <div
          class="fd-product-switch__subtitle"
        >
          Marketing Cloud
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--family-care"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Service Cloud
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--customer-briefing"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          Customer Data Cloud
        </div>
        
         
      </div>
      
      
    </li>
    
      
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
         
      <i
        class="fd-product-switch__icon sap-icon--batch-payments"
        role="presentation"
      />
      
         
      <div
        class="fd-product-switch__text"
      >
        
            
        <div
          class="fd-product-switch__title"
        >
          S/4HANA
        </div>
        
         
      </div>
      
      
    </li>
    
   
  </ul>
  

</div>
`;

exports[`Storyshots Components/Product Switch Medium 1`] = `
<div
  class="fd-product-switch__body fd-product-switch__body--col-3"
>
  
    
  <ul
    class="fd-product-switch__list"
  >
    
        
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
            
      <i
        class="fd-product-switch__icon sap-icon--home"
        role="presentation"
      />
      
            
      <div
        class="fd-product-switch__text"
      >
        
                
        <div
          class="fd-product-switch__title"
        >
          Home
        </div>
        
                
        <div
          class="fd-product-switch__subtitle"
        >
          Central Home
        </div>
        
            
      </div>
      
        
    </li>
    
        
    <li
      class="fd-product-switch__item selected"
      tabindex="0"
    >
      
            
      <i
        class="fd-product-switch__icon sap-icon--business-objects-experience"
        role="presentation"
      />
      
            
      <div
        class="fd-product-switch__text"
      >
        
                
        <div
          class="fd-product-switch__title"
        >
          Analytics Cloud
        </div>
        
                
        <div
          class="fd-product-switch__subtitle"
        >
          Analytics Cloud
        </div>
        
            
      </div>
      
        
    </li>
    
        
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
            
      <i
        class="fd-product-switch__icon sap-icon--contacts"
        role="presentation"
      />
      
            
      <div
        class="fd-product-switch__text"
      >
        
                
        <div
          class="fd-product-switch__title"
        >
          Catalog
        </div>
        
                
        <div
          class="fd-product-switch__subtitle"
        >
          Ariba
        </div>
        
            
      </div>
      
        
    </li>
    
        
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
            
      <i
        class="fd-product-switch__icon sap-icon--credit-card"
        role="presentation"
      />
      
            
      <div
        class="fd-product-switch__text"
      >
        
                
        <div
          class="fd-product-switch__title"
        >
          Guided Buying
        </div>
        
            
      </div>
      
        
    </li>
    
        
    <li
      class="fd-product-switch__item"
      tabindex="0"
    >
      
            
      <i
        class="fd-product-switch__icon sap-icon--cart-3"
        role="presentation"
      />
      
            
      <div
        class="fd-product-switch__text"
      >
        
                
        <div
          class="fd-product-switch__title"
        >
          Strategic Procurement
        </div>
        
            
      </div>
      
        
    </li>
    
    
  </ul>
  

</div>
`;

exports[`Storyshots Components/Product Switch Shellbar 1`] = `
<section>
  

  <div
    style="background-color: #354A5F;text-align: right;padding: 6px;"
  >
    
    
    <div
      class="fd-product-switch"
    >
      
        
      <div
        class="fd-popover fd-popover--right"
      >
        
            
        <div
          class="fd-popover__control"
        >
          
                
          <button
            aria-controls="product-switch-body"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="Image label"
            class="fd-button fd-button--transparent fd-popover__control fd-product-switch__control"
          >
            
                    
            <i
              class="sap-icon--grid"
            />
            
                
          </button>
          
            
        </div>
        
            
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--right"
          id="product-switch-body"
        >
          
                
          <div
            class="fd-product-switch__body"
          >
            
                    
            <ul
              class="fd-product-switch__list"
            >
              
                        
              <li
                class="fd-product-switch__item selected"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--home"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Home
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Central Home
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                selected=""
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--business-objects-experience"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Analytics Cloud
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Analytics Cloud
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--contacts"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Catalog
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Ariba
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--credit-card"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Guided Buying
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--cart-3"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Strategic Procurement
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--flight"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Travel & Expense
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Concur
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--shipping-status"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Vendor Management
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Fieldglass
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--customer"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Human Capital Management
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--sales-notification"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Sales Cloud
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Sales Cloud
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--retail-store"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Commerce Cloud
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Commerce Cloud
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--marketing-campaign"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Marketing Cloud
                  </div>
                  
                                
                  <div
                    class="fd-product-switch__subtitle"
                  >
                    Marketing Cloud
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--family-care"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Service Cloud
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--customer-briefing"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    Customer Data Cloud
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                        
              <li
                class="fd-product-switch__item"
                tabindex="0"
              >
                
                            
                <i
                  class="fd-product-switch__icon sap-icon--batch-payments"
                  role="presentation"
                />
                
                            
                <div
                  class="fd-product-switch__text"
                >
                  
                                
                  <div
                    class="fd-product-switch__title"
                  >
                    S/4HANA
                  </div>
                  
                            
                </div>
                
                        
              </li>
              
                    
            </ul>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    style="min-height: 530px"
  />
  

</section>
`;

exports[`Storyshots Components/Product Switch Small 1`] = `
<div
  style="width:450px;"
>
  
    
  <div
    class="fd-product-switch__body fd-product-switch__body--mobile"
  >
    
        
    <ul
      class="fd-product-switch__list"
    >
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--home"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Home
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Central Home
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item selected"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--business-objects-experience"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Analytics Cloud Analytics Cloud Analytics Cloud Analytics Cloud
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Analytics Cloud
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--contacts"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Catalog
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Ariba
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--credit-card"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Guided Buying
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--cart-3"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Strategic Procurement
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--flight"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Travel & Expense
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Concur
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--shipping-status"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Vendor Management
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Fieldglass
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--customer"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Product Management (very long text) ipsum dolor sit amet, consectetur adipiscing elit. Aenean at lacus rhoncus, tempus diam non, mattis tellus. Praesent ut odio ac lorem mollis dapibus. Maecenas turpis libero, placerat et dui ut, sagittis aliquam augue. Etiam et ex tempus, lobortis velit eget, laoreet nibh. Aliquam molestie sem at lectus ullamcorper eleifend. 
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--sales-notification"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Sales Cloud
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Sales Cloud
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--retail-store"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Commerce Cloud
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Commerce Cloud
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--marketing-campaign"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Marketing Cloud
          </div>
          
                    
          <div
            class="fd-product-switch__subtitle"
          >
            Marketing Cloud
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--family-care"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Service Cloud
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--customer-briefing"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            Customer Data Cloud
          </div>
          
                
        </div>
        
            
      </li>
      
            
      <li
        class="fd-product-switch__item"
        tabindex="0"
      >
        
                
        <i
          class="fd-product-switch__icon sap-icon--batch-payments"
          role="presentation"
        />
        
                
        <div
          class="fd-product-switch__text"
        >
          
                    
          <div
            class="fd-product-switch__title"
          >
            S/4HANA
          </div>
          
                
        </div>
        
            
      </li>
      
        
    </ul>
    
    
  </div>
  

</div>
`;
